# jsolver

./: CMakeLists.txt
cmake/: functions.cmake
jsolver/: cell.h  cross.h  field.h  group.h  hints.h  main.cc  methods.h  ring_buffer.h  solver.h
jsolver/methods/: bounds_intersection.h  fullfill.h  i_method.h  not_fit.h  unreachable.h  wall_repulsion.h
